// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowNavBar With user NOT logged in, Duplicate button sends user to sign-in page 1`] = `
<Fragment>
  <nav
    className="navbar"
  >
    <div
      className="navbar-elements"
    >
      <a
        className="logo-navbar"
        href="/workflows/"
      >
        <img
          className="image"
          src="undefinedimages/logo.svg"
        />
      </a>
      <div
        className="title-metadata-stack"
      >
        <Connect(EditableWorkflowName)
          isReadOnly={false}
        />
        <WorkflowMetadata
          openShareModal={[Function]}
          workflow={
            Object {
              "id": 303,
              "name": "Original Version",
              "owner_name": "Not LogggedIn",
              "public": true,
            }
          }
        />
      </div>
      <div
        className="nav-buttons"
      >
        <UndoRedoButtons
          redo={[Function]}
          undo={[Function]}
        />
        <button
          name="duplicate"
          onClick={[Function]}
        >
          Duplicate
        </button>
        <button
          name="share"
          onClick={[Function]}
        >
          Share
        </button>
        <a
          className="nav--link"
          href="/account/login"
        >
          Sign in
        </a>
      </div>
    </div>
  </nav>
</Fragment>
`;

exports[`WorkflowNavBar With user logged in, Duplicate button sends user to new copy 1`] = `
<Fragment>
  <nav
    className="navbar"
  >
    <div
      className="navbar-elements"
    >
      <a
        className="logo-navbar"
        href="/workflows/"
      >
        <img
          className="image"
          src="undefinedimages/logo.svg"
        />
      </a>
      <div
        className="title-metadata-stack"
      >
        <Connect(EditableWorkflowName)
          isReadOnly={false}
        />
        <WorkflowMetadata
          openShareModal={[Function]}
          workflow={
            Object {
              "id": 12,
              "name": "Original Version",
              "owner_name": "John Johnson",
              "public": true,
            }
          }
        />
      </div>
      <div
        className="nav-buttons"
      >
        <UndoRedoButtons
          redo={[Function]}
          undo={[Function]}
        />
        <button
          name="duplicate"
          onClick={[Function]}
        >
          Duplicate
        </button>
        <button
          name="share"
          onClick={[Function]}
        >
          Share
        </button>
        <WfHamburgerMenu
          api={
            Object {
              "duplicateWorkflow": [MockFunction],
            }
          }
          isReadOnly={false}
          user={
            Object {
              "id": 8,
            }
          }
          workflowId={12}
        />
      </div>
    </div>
  </nav>
</Fragment>
`;
